--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ascend</title>
+    <!-- Preload character images for faster loading -->
+    <link rel="preload" as="image" href="/alon.png" />
+    <link rel="preload" as="image" href="/Bandit.png" />
+    <link rel="preload" as="image" href="/cented.png" />
+    <link rel="preload" as="image" href="/clukz.png" />
+    <link rel="preload" as="image" href="/cupsey.png" />
+    <link rel="preload" as="image" href="/daumen.png" />
+    <link rel="preload" as="image" href="/duvall.png" />
+    <link rel="preload" as="image" href="/gake.png" />
+    <link rel="preload" as="image" href="/jijo2.png" />
+    <link rel="preload" as="image" href="/joji.png" />
+    <link rel="preload" as="image" href="/mitch.png" />
   </head>
   <body>
     <div id="root"></div>
